# DeveloperTools

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  DeveloperTools.pro  DeveloperTools.sln  README.md  copy_common_files.bat  copy_common_files_macos.sh
code/: vc15_build_u.props
code/AddCodeHeader/: AddCodeHeader.cpp  AddCodeHeader.h  AddCodeHeader.pro  AddCodeHeader.vcxproj  AddCodeHeader.vcxproj.filters  AddCodeHeaderEditor.cpp  AddCodeHeaderEditor.h  AddFileHeadThread.cpp  AddFileHeadThread.h  CMakeLists.txt  CRemoveCommentThread.cpp  CRemoveCommentThread.h  CommonData.cpp  CommonData.h  FileHeadHelper.cpp  FileHeadHelper.h  HeadItemTableModel.cpp  HeadItemTableModel.h  MainWidget.cpp  MainWidget.h  RemoveCommentHelper.cpp  RemoveCommentHelper.h  Test.cpp  Test.h  addcodeheader_global.h
code/CCommonTools/: CCommonTools.pro  CCommonTools.vcxproj  CCommonTools.vcxproj.filters  CMakeLists.txt  CommonTools.cpp  CommonTools.h  Config.cpp  Config.h  DatabaseTool.cpp  DatabaseTool.h  DialogBase.cpp  DialogBase.h  LongTextEdit.cpp  LongTextEdit.h  PathListDialog.cpp  PathListDialog.h  Resource.qrc  StringHelper.h  StyleManager.cpp  StyleManager.h  TableDataModel.cpp  TableDataModel.h  TextEditWidget.cpp  TextEditWidget.h  TreeItem.cpp  TreeItem.h  ccommontools_global.h  tableitemmodel.cpp  tableitemmodel.h  treeitemmodel.cpp  treeitemmodel.h
code/CCommonTools/qss/: flatblack.css  flatwhite.css
code/ColorPicker/: CMakeLists.txt  ColorPicker.cpp  ColorPicker.h  ColorPicker.qrc  ColorPicker_global.h  ColorTableHelper.cpp  ColorTableHelper.h
code/ColorPicker/common/: ColorConvert.cpp  ColorConvert.h  Common.cpp  Common.h
code/ColorPicker/widgets/: ColorPickerOverlay.cpp  ColorPickerOverlay.h  ColorWidget.cpp  ColorWidget.h  colorpickerwindow.cpp  colorpickerwindow.h  colorpickerwindow.ui
code/DeveloperTools/: CMakeLists.txt  DeveloperTools.pro  DeveloperTools.qrc  DeveloperTools.rc  DeveloperTools.vcxproj  DeveloperTools.vcxproj.filters  MainFrame.cpp  MainFrame.h  config.ini  main.cpp  resource.h
code/DeveloperTools/res/: DeveloperTools.icns  Info.plist  style.qss
code/FileRename/: CMakeLists.txt  FileRename.cpp  FileRename.h  FileRename.pro  FileRename.vcxproj  FileRename.vcxproj.filters  FileRenameHelper.cpp  FileRenameHelper.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  filerename_global.h
code/KeyboardTester/: KeyboardTester.cpp  KeyboardTester.h  KeyboardTester.pro  KeyboardTester.vcxproj  KeyboardTester.vcxproj.filters  KeyboardTester_global.h  keyboardTester.qrc
code/KeyboardTester/res/: index.html
code/KeyboardTester/res/index_files/: kb_test-09cf3d8fcd.css  kb_test-695ee2b450.js
code/PasswordGeneratorApi/: AssemblyInfo.cpp  PasswordGeneratorApi.vcxproj  PasswordGeneratorApi.vcxproj.filters  PasswordGeneratorImp.cpp  PasswordGeneratorImp.h  ReadMe.txt  Stdafx.cpp
code/PixelRuler/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  PixelRuler.cpp  PixelRuler.h  PixelRuler.pro  PixelRuler.vcxproj  PixelRuler.vcxproj.filters  Resource.qrc  RulerDrawer.cpp  RulerDrawer.h  RulerWidget.cpp  RulerWidget.h  pixelruler_global.h
code/PixelRuler/res/: help.md
code/WallpaperTool/: CMakeLists.txt  HistoryWallpaperMgr.cpp  HistoryWallpaperMgr.h  HistoryWallpaperWidget.cpp  HistoryWallpaperWidget.h  ImageLabel.cpp  ImageLabel.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  SettingsDlg.cpp  SettingsDlg.h  SettingsDlg.ui  WallpapaerWidget.cpp  WallpapaerWidget.h  WallpaperHelper.cpp  WallpaperHelper.h  WallpaperTool.cpp  WallpaperTool.h  WallpaperTool.pro  WallpaperTool.qrc  WallpaperTool.vcxproj  WallpaperTool.vcxproj.filters  wallpapertool_global.h
code/WallpaperTool/BingWallpaper/: bingwallpapermanager.cpp  bingwallpapermanager.h  bingwallpaperwidget.cpp  bingwallpaperwidget.h
code/WindowResizer/: Common.cpp  Macros.h  WindowResizer.cpp  WindowResizer.def  WindowResizer.h  WindowResizer.rc  WindowResizer.vcxproj  WindowResizer.vcxproj.filters  WindowResizerDlg.cpp  WindowResizerDlg.h  framework.h  pch.h
code/WindowResizer/res/: WindowResizer.rc2
common/: MainFrame.xml  Template.txt
include/: define.h  mainwindowinterface.h  moduleinterface.h
